<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAPP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="1dp"
        android:onClick="btnAPP1OnClick"
        android:text="@string/btnAPP1"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnAPP2"
        app:layout_constraintEnd_toStartOf="@+id/btnAPP2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAPP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="328dp"
        android:text="@string/btnAPP2"
        app:layout_constraintEnd_toStartOf="@+id/btnAPP3"
        app:layout_constraintStart_toEndOf="@+id/btnAPP1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAPP3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/btnAPP3"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnAPP2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAPP2" />
</androidx.constraintlayout.widget.ConstraintLayout>