<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main5Activity">

    <Button
        android:id="@+id/btnCAMERA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="201dp"
        android:text="@string/btnCAMERA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgvFOTO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/imgvFOTO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCAMERA"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnGALERIA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="21dp"
        android:onClick="btnCAMERAOnClick"
        android:text="@string/btnGALERIA"
        app:layout_constraintStart_toStartOf="@+id/imgvFOTO"
        app:layout_constraintTop_toBottomOf="@+id/imgvFOTO" />
</androidx.constraintlayout.widget.ConstraintLayout>